--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,15 @@ addons:
   apt:
     packages:
     - libxml2-dev
+    - hunspell
 python:
 - '3.5'
 install:
 - pip install Nikola[extras] awscli
 script:
 - nikola build
+- ./spell-check.sh
+- ./check-links.sh
 deploy:
   provider: s3
   access_key_id: AKIAJ35TSRCIRYSU6C7Q
