--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
 # Configuration of Academic
 # Documentation: https://sourcethemes.com/academic/
+publishDir = "docs"
 
 # The URL of your website.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
