--- a/config.toml
+++ b/config.toml
@@ -261,14 +261,19 @@ defaultContentLanguageInSubdir = false
   weight = 1
 
 [[menu.main]]
+  name = "Research"
+  url = "publication/"
+  weight = 10
+
+[[menu.main]]
   name = "Teaching"
   url = "teaching/"
-  weight = 5
+  weight = 20
 
 [[menu.main]]
   name = "CV"
   url = "https://jrnold.github.io/cv"
-  weight = 7
+  weight = 30
 
 # Taxonomies.
 [taxonomies]
