--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ publishDir = "docs"
 baseurl = "https://jrnold.me/"
 
 # Title of your site
-title = "Jeffrey B. Arnold"
+title = "jrnold"
 
 # Your copyright notice - appears in site footer.
 # To display a copyright symbol, type `&copy;`.
@@ -51,15 +51,15 @@ defaultContentLanguageInSubdir = false
   font = "default"
 
   # Your details.
-  name = "Jeffrey B. Arnold"
-  role = "Data Science Fellow"
+  name = "Jeff Arnold"
+  role = "Data Scientist"
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "Insight", url = "https://www.insightdatascience.com/"} ]
+  organizations = [ ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
-  avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
+  # avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
   email = "jeffrey.arnld@gmail.com"
   # address = "Building 1 Room 1, Stanford University, California, 90210, USA"
   # office_hours = "Monday 10:00 to 13:00 or email for appointment"
@@ -253,31 +253,6 @@ defaultContentLanguageInSubdir = false
 [params.menus]
   # Align the main menu to the right of the page? (true/false)
   align_right = true
-
-[[menu.main]]
-  name = "Home"
-  url = "#about"
-  weight = 1
-
-[[menu.main]]
-  name = "Research"
-  url = "publication/"
-  weight = 10
-
-[[menu.main]]
-  name = "Software"
-  url = "software/"
-  weight = 20
-
-[[menu.main]]
-  name = "Teaching"
-  url = "teaching/"
-  weight = 20
-
-[[menu.main]]
-  name = "CV"
-  url = "https://jrnold.github.io/cv"
-  weight = 30
 
 # Taxonomies.
 [taxonomies]
